--- a/vignettes/cgc-sparql.Rmd
+++ b/vignettes/cgc-sparql.Rmd
@@ -1,11 +1,18 @@
 ---
-title: "Find Data on CGC via Data Exploerer, SPARQL, and Data API"
+title: "Find Data on CGC via Data Exploerer, SPARQL, and Datasets API"
+author: "Tengfei Yin <<tengfei.yin@sbgenomics.com>>"
+date: "`r Sys.Date()`"
 output:
   rmarkdown::html_vignette:
-  toc: true
+    toc: true
+    toc_depth: 4
+    number_sections: true
+    css: sevenbridges.css
+    includes:
+      in_header: header.html
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Find Data on CGC via Data Exploerer, SPARQL, and Data API}
+  %\VignetteIndexEntry{Find Data on CGC via Data Exploerer, SPARQL, and Datasets API}
 ---
 
 ```{r include=FALSE}
@@ -18,22 +25,22 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introdution
 
-There are currently three ways to find the data you need on CGC
+There are currently three ways to find the data you need on CGC:
 
 - Most easy: use our powerful and pretty GUI called 'data explorer' interactively on the platform, please read tutorial [here](http://docs.cancergenomicscloud.org/docs/the-data-browser)
 - Most advanced: for advanced user, please SPARQL query directly [tutorial](http://docs.cancergenomicscloud.org/docs/query-tcga-metadata-programmatically#section-example-queries)
-- Most sweet: use our Data set API, by creating a query list in R (comming soon)
+- Most sweet: use our Datasets API, by creating a query list in R (comming soon)
 
-# Quick start
+# Quick Start
 
-## Graphical data explorer 
+## Graphical data explorer
 
-Please read tutorial [here](http://docs.cancergenomicscloud.org/docs/the-data-browser).
+Please read the tutorial [here](http://docs.cancergenomicscloud.org/docs/the-data-browser).
 
 ## SPARQL examples
 
 Seven Bridges' SPARQL console, available at [https://opensparql.sbgenomics.com](https://opensparql.sbgenomics.com).
- 
+
 Please read following tutorials first
 
 - [Query TCGA metadata programmatically](http://docs.cancergenomicscloud.org/docs/query-tcga-metadata-programmatically#section-example-queries)
@@ -60,7 +67,7 @@ where
 
  ?case tcga:hasFollowUp ?follow_up .
  ?follow_up tcga:hasDaysToLastFollowUp ?days_to_last_follow_up .
- filter(?days_to_last_follow_up>550) 
+ filter(?days_to_last_follow_up>550)
 
  ?follow_up tcga:hasVitalStatus ?vital_status .
  ?vital_status rdfs:label ?vital_status_label .
@@ -91,7 +98,7 @@ where
 }
 
 "
-qd <- SPARQL(endpoint,query)
+qd <- SPARQL(endpoint, query)
 df <- qd$results
 head(df)
 ```
@@ -99,64 +106,64 @@ head(df)
 You can use the CGC API to access the TCGA files found using SPARQL queries. To get files that have download links, you will need to use the SPARQL variable __path__ in your query.
 
 ```{r}
-
-## api(api_url=base,auth_token=auth_token,path='action/files/get_ids', method='POST',query=None,data=filelist)
+# api(api_url = base, auth_token = auth_token, path = "action/files/get_ids",
+#     method = "POST", query = None, data = filelist)
 df.path <- df[,"path"]
 df.path
 ```
 
-You can directly copy those files to a project, make sure if the files is controled 
-access
+You can directly copy those files to a project, make sure if the files is
+controlled access
 
-- project support TCGA controlled access 
-- you login from ERA Common.
+- project support TCGA controlled access
+- you log in from eRA Commons
 
 ```{r}
 library("sevenbridges")
-a = Auth(platform = "cgc", username = "tengfei")
-## get id (only works for CGC platform)
+a = Auth(platform = "cgc", token = "your_cgc_token")
+# get id (only works for CGC platform)
 ids = a$get_id_from_path(df.path)
-## copy file from id to project with controlled access
+# copy file from id to project with controlled access
 (p = a$project(id = "tengfei/control-test"))
 a$copyFile(ids, p$id)
 ```
 
-Now have fun with more examples in this [tutorial](http://docs.cancergenomicscloud.org/docs/query-tcga-metadata-programmatically#section-example-queries)
+Now have fun with more examples in this [tutorial](http://docs.cancergenomicscloud.org/docs/query-tcga-metadata-programmatically#section-example-queries).
 
-## Dataset API examples
+## Datasets API examples
 
-Please read the [tutorials](http://docs.cancergenomicscloud.org/docs/datasets-api-overview)
+Please read the [tutorials](http://docs.cancergenomicscloud.org/docs/datasets-api-overview).
 
 ### Browse TCGA via the Datasets API
 
-Doing a HTTP GET on this endpoint one will get a resource with links to all entities in the dataset. Following these links (doing an HTTP GET on them) one will go to a list of entities (for example /files) from TCGA dataset identified with their proper URL. Further following one of these links you'll get a particular resource (if we went to /files, we'll get a description of a particular file) with all specific properties like id, label, etc. and links to other entities that are connected to a specific resource (for example /cases) that you can explore further. From there on, the process repeats as long as you follow the links.
+Doing a HTTP `GET` on this endpoint one will get a resource with links to all entities in the dataset. Following these links (doing an HTTP `GET` on them) one will go to a list of entities (for example `/files`) from TCGA dataset identified with their proper URL. Further following one of these links you'll get a particular resource (if we went to `/files`, we'll get a description of a particular file) with all specific properties like id, label, etc. and links to other entities that are connected to a specific resource (for example `/cases`) that you can explore further. From there on, the process repeats as long as you follow the links.
 
 #### Return datasets accessible trough the CGC
 
-Create an Auth object with your token, make sure you are using the correct url. 
+Create an Auth object with your token, make sure you are using the correct URL.
 
-- https://cgc-datasets-api.sbgenomics.com/
+- `https://cgc-datasets-api.sbgenomics.com/`
 
-use `Auth$api()` method you don't have to re-type token and url.
+use `Auth$api()` method so there is no need to type base URL or token again.
 
 ```{r}
 library("sevenbridges")
-## create an Auth 
-a = Auth(url = "https://cgc-datasets-api.sbgenomics.com/", 
+# create an Auth object
+a = Auth(url = "https://cgc-datasets-api.sbgenomics.com/",
          token = "your_cgc_token")
 a$api(path = "datasets")
 ```
 
 #### Return list of all TCGA entities
 
-You can issue another GET request to the href of the tcga object, if you want to
-access TCGA data.
+You can issue another `GET` request to the href of the tcga object, if you want
+to access TCGA data.
 
 ```{r}
-a = Auth(url = "https://cgc-datasets-api.sbgenomics.com/datasets/tcga/v0", 
+a = Auth(url = "https://cgc-datasets-api.sbgenomics.com/datasets/tcga/v0",
          token = "your_cgc_token")
-(res = a$api()) ## default method is GET
-## list all resources/entities
+(res = a$api())  # default method is GET
+# list all resources/entities
 names(res$"_links")
 ```
 
@@ -176,12 +183,13 @@ a$api(path = "files/schema")
 
 #### Copy files to you project
 
-Get file id from Data set API, then use public API to copy files. Make sure your
-project is "TCGA" compatible, otherwise if you are trying to copy controlled access data 
-to your non-TCGA project, you will get 
+Get file id from Datasets API, then use public API to copy files. Make sure your
+project is "TCGA" compatible, otherwise if you are trying to copy controlled
+access data to your non-TCGA project, you will get
 
+```
 "HTTP Status 403: Insufficient privileges to access the requested file."
-
+```
 
 ```{r}
 (res = a$api(path = "files"))
@@ -189,14 +197,14 @@ get_id = function(obj){
    sapply(obj$"_embedded"$files, function(x) x$id)
 }
 ids = get_id(res)
-## create CGC auth
-a_cgc = Auth(token = a$token, url = "https://cgc-api.sbgenomics.com/v2/")
+# create CGC auth
+a_cgc = Auth(platform = "cgc", token = a$token)
 a_cgc$copyFile(id = ids, project = "tengfei/tcga-demo")
 ```
 
 ### Post with query
 
-endpoint user can filter collection resources by using a DSL in JSON format that translates as a subset of SPARQL. Main advantage here is that an end user gets the subset SPARQL expressiveness without the need to learn SPARQL specifics. 
+endpoint user can filter collection resources by using a DSL in JSON format that translates as a subset of SPARQL. Main advantage here is that an end user gets the subset SPARQL expressiveness without the need to learn SPARQL specification.
 
 #### Find samples connected to a case
 
@@ -214,12 +222,14 @@ Count samples connected to a case
 a$api(path = "query/total", body = body, method = "POST")
 ```
 
-Issuing a GET request to the href path will return the following data:
+Issuing a `GET` request to the href path will return the following data:
 
 Note: `api` function is a light layer of httr package, it's different from `Auth$api` call.
 
 ```{r}
-content(api(token = a$token, base_url = "https://cgc-datasets-api.sbgenomics.com/datasets/tcga/v0/samples/9259E9EE-7279-4B62-8512-509CB705029C"))
+httr::content(
+    api(token = a$token,
+        base_url = "https://cgc-datasets-api.sbgenomics.com/datasets/tcga/v0/samples/9259E9EE-7279-4B62-8512-509CB705029C"))
 ```
 
 #### Find cases with given age at diagnosis
@@ -233,7 +243,7 @@ body = list(
    "entity" = "cases",
    "hasAgeAtDiagnosis" = list(
        "filter" = list(
-           "gt" = 10, 
+           "gt" = 10,
            "lt" = 50
        )
    )
@@ -250,7 +260,7 @@ body = list(
    "entity" = "cases",
    "hasAgeAtDiagnosis" = list(
        "filter" = list(
-           "gt" = 10, 
+           "gt" = 10,
            "lt" = 50
        )
    ),
@@ -282,22 +292,18 @@ body = list(
 a$api(path = "query", body = body, method = "POST")
 ```
 
-Issuing a GET request to the href path
+Issuing a `GET` request to the href path
 
 ```{r}
-content(api(token = a$token, 
-            base_url = "https://cgc-datasets-api.sbgenomics.com/datasets/tcga/v0/cases/0004D251-3F70-4395-B175-C94C2F5B1B81"))
-
+httr::content(
+    api(token = a$token,
+        base_url = "https://cgc-datasets-api.sbgenomics.com/datasets/tcga/v0/cases/0004D251-3F70-4395-B175-C94C2F5B1B81"))
 ```
-
 
 #### Query with multiple filters on a case
 
-
 ```{r}
-get_id = function(obj){
-   sapply(obj$"_embedded"$files, function(x) x$id)
-}
+get_id = function(obj) sapply(obj$"_embedded"$files, function(x) x$id)
 names(res)
 body = list("entity" = "cases",
             "hasSample" = list(
