--- a/vignettes/docker.Rmd
+++ b/vignettes/docker.Rmd
@@ -1,10 +1,15 @@
 ---
 title: "Creating Your Docker Container and Command Line Interface (with docopt)"
+author: "Tengfei Yin <<tengfei.yin@sbgenomics.com>>"
+date: "`r Sys.Date()`"
 output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 4
-    number_sections: false
+    number_sections: true
+    css: sevenbridges.css
+    includes:
+      in_header: header.html
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{Creating Your Docker Container and Command Line Interface (with docopt)}
@@ -14,73 +19,68 @@ vignette: >
 knitr::opts_chunk$set(eval = TRUE)
 ```
 
-## Introduction
+# Introduction
 
 __In progress__
 
-In this tutorial, we will go through ways to 
+In this tutorial, we will go through ways to
 
 - Make native command line interface in R
 
-There are many fun ways to do it, here I am more focused for R developers. 
+There are many fun ways to do it, here I am more focused for R developers.
 
-### Existing docker repos
+## Existing Docker repos
 
 Before you create any, make sure you don't re-invent the wheel and use the best
-base image for your container as your tool chain may save your lots of time later on. 
+base image for your container as your tool chain may save your lots of time later on.
 
-#### Rocker Project
+### Rocker Project
 
 Official R Docker images is called "Rocker"" project and is on [GitHub](https://github.com/rocker-org/rocker), please visit the page to find more details and Dockerfile.
 
-| Image                | Description                        | 
+| Image                | Description                        |
 | -------------------- |:----------------------------------:|
-| `rocker/r-base`      | base package to build from         | 
-| `rocker/r-devel`     | base plus R-devel from SVN         |  
-| `rocker/rstudio`     | base plus RStudio Server           |    
+| `rocker/r-base`      | base package to build from         |
+| `rocker/r-devel`     | base + R-devel from SVN            |
+| `rocker/rstudio`     | base + RStudio Server              |
 | `rocker/hadleyverse` | rstudio + Hadley's packages, LaTeX |
 | `rocker/ropensci`    | hadleyverse + rOpenSci packages    |
 | `rocker/r-devel-san` | base, SVN's R-devel and SAN        |
 
-#### Bioconductor Images
+### Bioconductor Images
 
-Bioconductor have a nice [page](http://bioconductor.org/help/docker/) about the official docker images, please read for more details.
+Bioconductor have a nice [page](https://bioconductor.org/help/docker/) about the official Docker images, please read for more details.
 
-| Image                           |
-| ------------------------------- | 
-| bioconductor/devel_base         |
-| bioconductor/devel_core         |
-| bioconductor/devel_flow         |
-| bioconductor/devel_microarray   |
-| bioconductor/devel_proteomics   |
-| bioconductor/devel_sequencing   |
-| bioconductor/release_base       |
-| bioconductor/release_core       |
-| bioconductor/release_flow       |
-| bioconductor/release_microarray |
-| bioconductor/release_proteomics |
-| bioconductor/release_sequencing |
+| Image (release branch)              | Image (development branch)          |
+| ----------------------------------- | ----------------------------------- |
+| `bioconductor/release_base`         | `bioconductor/devel_base`           |
+| `bioconductor/release_core`         | `bioconductor/devel_core`           |
+| `bioconductor/release_flow`         | `bioconductor/devel_flow`           |
+| `bioconductor/release_microarray`   | `bioconductor/devel_microarray`     |
+| `bioconductor/release_proteomics`   | `bioconductor/devel_proteomics`     |
+| `bioconductor/release_sequencing`   | `bioconductor/devel_sequencing`     |
+| `bioconductor/release_metabolomics` | `bioconductor/devel_metabolomics`   |
 
 To understand the image quickly here is the short instruction for the image name:
 
 - __release__ images are based on `rocker/rstudio`
 - __devel__ images are based on `rocker/rstudio-daily`
+
 - __base__: Contains R, RStudio, and BiocInstaller + system dependencies.
 - __core__: base + a selection of core.
 - __flow__: core + all packages tagged with the _FlowCytometry_ biocView.
 - __microarray__: core + all packages tagged with the _Microarray_ biocView.
 - __proteomics__: core + all packages tagged with the _Proteomics_ biocView.
 - __sequencing__: core + all packages tagged with the _Sequencing_ biocView.
+- __metabolomics__: core + all packages tagged with the _Metabolomics_ biocView.
 
-#### Dockerhub 
+### Docker Hub
 
-[Dockerhub](https://hub.docker.com/) also provide public/private repos, you can search
-existing tools without building yourself, it's very likely some popular tool already have
-docker container well maintained there.
+[Docker Hub](https://hub.docker.com) also provide public/private repos, you can search existing tools without building yourself, it's very likely some popular tool already have Docker container well maintained there.
 
-#### Seven Bridges Docker Registry
+### Seven Bridges Docker Registry
 
-Tutorial comming soon. 
+Tutorial coming soon.
 
 Example Seven Bridges registry:
 
@@ -88,24 +88,24 @@ Example Seven Bridges registry:
 - __Cancer Genomics Cloud__: `cgc-images.sbgenomics.com/<repository>[:<tag>]`
 
 
-## Tutorial: random number generator 
+# Tutorial: Random Number Generator
 
-Our goal here is to making a cwl app to generate unif random numbers, yes, the core
-function is `runif()`, it's a native function in R. 
+Our goal here is to making a CWL app to generate uniform random numbers, yes,
+the core function is `runif()`, it's a native function in R.
 
 ```{r}
-runif
+dput(runif)
 set.seed(1001)
 runif(10)
 ```
 
-### Using docopt package
+## Using `docopt` Package
 
 In R, we also have a nice implementation in a package called `docopt`, developed by *Edwin de Jonge*. Check out its [tutorial](https://github.com/docopt/docopt.R) on GitHub.
 
 So let's quickly create a command line interface for our R scripts with a dummy example. Let's turn the uniform distribution function `runif` into a command line tool.
 
-when you check out the help page for `runif`, here is the key information you want to mark down. 
+when you check out the help page for `runif`, here is the key information you want to markdown.
 
 ```
 Usage
@@ -114,16 +114,16 @@ runif(n, min = 0, max = 1)
 
 Arguments
 
-n    
+n
 number of observations. If length(n) > 1, the length is taken to be the number required.
 
-min, max    
+min, max
 lower and upper limits of the distribution. Must be finite.
 ```
 
-I will add one more parameter to set seed, here is the R script file called `runif.R`. 
+I will add one more parameter to set seed, here is the R script file called `runif.R`.
 
-At the beginning of the commadn line script, I use the docopt standard to write my tool help. 
+At the beginning of the command line script, I use the docopt standard to write my tool help.
 
 ```{r}
 'usage: runif.R [--n=<int> --min=<float> --max=<float> --seed=<float>]
@@ -149,8 +149,8 @@ Looks like it works, now let's add main function script for this command line to
 ```{r}
 opts <- docopt(doc)
 set.seed(opts$seed)
-runif(n = as.integer(opts$n), 
-      min = as.numeric(opts$min), 
+runif(n = as.integer(opts$n),
+      min = as.numeric(opts$min),
       max = as.numeric(opts$max))
 ```
 
@@ -169,12 +169,12 @@ options:
 library("docopt")
 opts <- docopt(doc)
 set.seed(opts$seed)
-runif(n = as.integer(opts$n), 
-      min = as.numeric(opts$min), 
+runif(n = as.integer(opts$n),
+      min = as.numeric(opts$min),
       max = as.numeric(opts$max))
 ```
 
-Let's test this command line. 
+Let's test this command line.
 
 ```
 $ runif.R --help
@@ -198,25 +198,24 @@ Loading required package: methods
  [8] 89.349485 55.592066 46.204859
 ```
 
-For full example you can check my GitHub [example](https://github.com/tengfei/docker/tree/master/runif)
+For full example you can check my GitHub [example](https://github.com/tengfei/docker/tree/master/runif).
 
-### Quick command line interface with commandArgs (position and named args)
+## Quick Command Line Interface with `commandArgs` (Position and Named Args)
 
-For advanced users, please read another tutorial "Creating Your Docker Container and Command Line Interface (with docopt)", "docopt" is more formal way to construct your command line interface, but there is a quick way to make command line
-interface here using just `commandArgs`
+For advanced users, please read another tutorial "Creating Your Docker Container and Command Line Interface (with docopt)", "docopt" is more formal way to construct your command line interface, but there is a quick way to make command line interface here using just `commandArgs`.
 
 Suppose I already have a R script like this using position mapping the arguments
 
-1. numbers
-2. min
-3. max
+1. `numbers`
+2. `min`
+3. `max`
 
 ```{r, eval = TRUE, comment=''}
 fl <- system.file("docker/sevenbridges/src", "runif2spin.R", package = "sevenbridges")
 cat(readLines(fl), sep = '\n')
 ```
 
-Ignore the comment part, I will introduce spin/stich later. My base command will be somethine like
+Ignore the comment part, I will introduce spin/stich later. My base command will be something like
 
 ```
 Rscript runif2spin.R 10 30 50
@@ -230,9 +229,9 @@ library("readr")
 fd <- fileDef(name = "runif.R",
               content = read_file(fl))
 
-rbx <- Tool(id = "runif", 
+rbx <- Tool(id = "runif",
             label = "runif",
-            hints = requirements(docker(pull = "rocker/r-base"), 
+            hints = requirements(docker(pull = "rocker/r-base"),
                                  cpu(1), mem(2000)),
             requirements = requirements(fd),
             baseCommand = "Rscript runif.R",
@@ -246,19 +245,17 @@ rbx <- Tool(id = "runif",
                           input(id = "max",
                                 type = "float",
                                 position = 3)),
-            outputs = output(id = "random", glob = "output.txt"))   
+            outputs = output(id = "random", glob = "output.txt"))
 ```
 
-Now copy-paste the json into your project app and run it in the cloud to test it
+Now copy-paste the JSON into your project app and run it in the cloud to test it
 
-How about named argumentments? I will still recommend use "docopt" package, but for simple
-way.
+How about named arguments? I will still recommend use "docopt" package, but for simple way.
 
 ```{r, eval = TRUE, comment=''}
 fl <- system.file("docker/sevenbridges/src", "runif_args.R", package = "sevenbridges")
 cat(readLines(fl), sep = '\n')
 ```
-
 
 ```
 Rscript runif_args.R --n=10 --min=30 --max=50
@@ -271,9 +268,9 @@ library("readr")
 fd <- fileDef(name = "runif.R",
               content = read_file(fl))
 
-rbx <- Tool(id = "runif", 
+rbx <- Tool(id = "runif",
             label = "runif",
-            hints = requirements(docker(pull = "rocker/r-base"), 
+            hints = requirements(docker(pull = "rocker/r-base"),
                                  cpu(1), mem(2000)),
             requirements = requirements(fd),
             baseCommand = "Rscript runif.R",
@@ -290,20 +287,15 @@ rbx <- Tool(id = "runif",
                                 type = "float",
                                  separate = FALSE,
                                 prefix = "--max=")),
-            outputs = output(id = "random", glob = "output.txt"))   
-
+            outputs = output(id = "random", glob = "output.txt"))
 ```
 
+## Quick Report: Spin and Stich
 
+Alternative, you can use spin/stich from knitr to generate report directly
+from an R script with special format. For example, let's use the above example
 
-### Quick report: Spin and Stich
-
-Alternative, you can use spin/stich from knitr to generate report directly from a 
-Rscript with special format. For example, let's use above example
-
-
-
-```{r, eval = TRUE, comment=''}
+```{r, eval = TRUE, comment = ""}
 fl <- system.file("docker/sevenbridges/src", "runif_args.R", package = "sevenbridges")
 cat(readLines(fl), sep = '\n')
 ```
@@ -314,16 +306,16 @@ You command is something like this
 Rscript -e "rmarkdown::render(knitr::spin('runif_args.R', FALSE))" --args --n=100 --min=30 --max=50
 ```
 
-And so I describe my tool like this with docker image `rocker/hadleyverse` this contians knitr and rmarkdown package.
+And so I describe my tool like this with Docker image `rocker/hadleyverse` this contains knitr and rmarkdown package.
 
 ```{r}
 library("readr")
 fd <- fileDef(name = "runif.R",
               content = read_file(fl))
 
-rbx <- Tool(id = "runif", 
+rbx <- Tool(id = "runif",
             label = "runif",
-            hints = requirements(docker(pull = "rocker/hadleyverse"), 
+            hints = requirements(docker(pull = "rocker/hadleyverse"),
                                  cpu(1), mem(2000)),
             requirements = requirements(fd),
             baseCommand = "Rscript -e \"rmarkdown::render(knitr::spin('runif.R', FALSE))\" --args",
@@ -346,24 +338,23 @@ rbx <- Tool(id = "runif",
 ```
 
 
-You will get a report in the end
+You will get a report in the end.
 
+## Executable Report with R Markdown (Advanced)
 
-### Executable report with R markdown (advanced)
-
-We cannot really make a Rmarkdown file executable in it by simply put 
+We cannot really make a R Markdown file executable in it by simply put
 
 ```
 #!/bin/bash/Rscript
 ```
 
-In your markdown
+In your markdown document.
 
-Of course, we can figure out a way to do it in `liftr` or `knitr`. But rmarkdown allow you to pass parameters to your Rmardown template, please read this tutorial [Parameterized Reports](http://rmarkdown.rstudio.com/developer_parameterized_reports.html). This doesn't solve my problem that I want to directly describe command line interface in the markdown template. However, here is alternative method:
+Of course, we can figure out a way to do it in `liftr` or `knitr`. But R Markdown allow you to pass parameters to your R Markdown template, please read this tutorial [Parameterized Reports](http://rmarkdown.rstudio.com/developer_parameterized_reports.html). This doesn't solve my problem that I want to directly describe command line interface in the markdown template. However, here is alternative method:
 
-Create an command line interface to pass `params` from docopt into `rmarkdown::render()` function. In this way, we can pass as many as possible parameters from command line interface into our Rmarkdown template. 
+Create an command line interface to pass `params` from docopt into `rmarkdown::render()` function. In this way, we can pass as many as possible parameters from command line interface into our R Markdown template.
 
-So here we go, here is updated methods and it's also what I use for another tutorial about RNA-seq workflow. 
+So here we go, here is updated methods and it's also what I use for another tutorial about RNA-seq workflow.
 
 ```{r, eval = TRUE}
 fl <- system.file("docker/sevenbridges/src/", "runif.R", package = "sevenbridges")
@@ -381,20 +372,17 @@ fl <- system.file("docker/sevenbridges/report/", "report.Rmd", package = "sevenb
 cat(readLines(fl), sep = '\n')
 ```
 
-## Setup dockerhub automated build
+# Setup Docker Hub Automated Build
 
-To make things more reproducible and explicit and automatic, you can do a autohook to automatically build your container/image on docker hub. Here is what I do
+To make things more reproducible and explicit and automatic, you can do a autohook to automatically build your container/image on Docker Hub. Here is what I do
 
 1. I created some project called 'docker' on my GitHub and it has all container that crated from a Dockerfile, for example, tengfei/docker/runif, please go [here](https://github.com/tengfei/docker/tree/master/runif) to check it out
-2. This folder root has a Dockerfile and subfolders for extra materials I added at build time, like script or report template. 
-3. login your dockerhub account, following this [tutorial](https://docs.docker.com/docker-hub/builds/) to make "automated build" from your GitHub account. Make sure you input the right location for your Dockerfile, by customizing it. 
-4. Then you will have auto-build every time you push a new update in GitHub. 
-5. Start using your docker image like 'tengfei/runif'
-6. Feel free to push it onto your Seven Bridges platform registry as well. 
+2. This folder root has a Dockerfile and subfolders for extra materials I added at build time, like script or report template.
+3. Log into your Docker Hub account, following this [tutorial](https://docs.docker.com/docker-hub/builds/) to make "automated build" from your GitHub account. Make sure you input the right location for your Dockerfile, by customizing it.
+4. Then you will have auto-build every time you push a new update in GitHub.
+5. Start using your Docker image like `tengfei/runif`.
+6. Feel free to push it onto your Seven Bridges platform registry as well.
 
-## More examples
+# More Examples
 
-There are more examples under 'inst/docker' folder, you can check out how to
-describe  command line and build docker, how to make report template.
-You may read the online GitHub [code](https://github.com/sbg/sevenbridges-r/tree/master/inst/docker).
-Or you could read another tutorial about how we wrap RNA-seq workflow from bioconductor. 
+There are more examples under `inst/docker` folder, you can check out how to describe command line and build Docker, how to make report template. You may read the online GitHub [code](https://github.com/sbg/sevenbridges-r/tree/master/inst/docker). Or you could read another [tutorial](https://sbg.github.io/sevenbridges-r/articles/bioc-workflow.html) about how we wrap RNA-seq workflow from Bioconductor.
